# OpenCV

./: CMakeLists.txt  CannyEdgeDetection.cpp  DrawPatterns.cpp  FaceDetection.cpp  FeatureMatch.cpp  HoughPatterns.cpp  LKOpticalFlow.cpp  SobelEdgeDetection.cpp  cv-flow.cpp  hello.cpp
